- Implemented Error Codes everywhere, where I know they're necessary - Set typefaces in most places - GuideActivity is complete     - A slight difference from iOS, will segue to HS automatically with a 1.5 second delay, upon reaching last page

--- a/app/src/main/res/layout/club_activity.xml
+++ b/app/src/main/res/layout/club_activity.xml
@@ -44,7 +44,7 @@
                 android:gravity="start"
                 android:textColor="@color/accent"
                 android:text="text"
-                android:textSize="@dimen/textSizeSubtitle"
+                android:textSize="@dimen/textSize20Subtitle"
                 android:id="@+id/ClubSTitleLabel"/>
 
             <!-- Description Label -->
@@ -55,7 +55,7 @@
                 android:layout_marginTop="8dp"
                 android:textColor="@color/accent"
                 android:text="text"
-                android:textSize="@dimen/textSizeLabel"
+                android:textSize="@dimen/textSize17Label"
                 android:id="@+id/ClubSDescriptionLabel"/>
         </LinearLayout>
 
@@ -78,7 +78,7 @@
                 android:inputType="text"
                 android:textColor="@color/whiteText"
                 android:text="textField"
-                android:textSize="@dimen/textSizeSubtitle"
+                android:textSize="@dimen/textSize20Subtitle"
                 android:id="@+id/ClubSTitleField"/>
 
             <!-- Description Label -->
@@ -93,7 +93,7 @@
                 android:gravity="top"
                 android:inputType="textMultiLine"
                 android:text="textField"
-                android:textSize="@dimen/textSizeLabel"
+                android:textSize="@dimen/textSize17Label"
                 android:id="@+id/ClubSDescriptionField"/>
         </LinearLayout>
     </RelativeLayout>
@@ -110,7 +110,7 @@
         android:maxLines="1"
         android:textColor="@color/accent"
         android:text="text"
-        android:textSize="@dimen/textSizeDetails"
+        android:textSize="@dimen/textSize14Details"
         android:id="@+id/ClubSLeaderList"/>
 
     <!-- Clubs Announcements List -->
