--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -2,6 +2,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@android:color/black"/>
     <item>
-        <bitmap android:src="@drawable/app_icon_1024x1024_no_bg" android:gravity="center"/>
+        <bitmap android:src="@drawable/splash_icon" android:gravity="center"/>
     </item>
 </layer-list>
