--- a/app/src/main/res/layout/text_viewer_activity.xml
+++ b/app/src/main/res/layout/text_viewer_activity.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/textSizeDetails"
+            android:textSize="@dimen/textSize14Details"
             android:id="@+id/TVSText" />
     </ScrollView>
 </RelativeLayout>
