--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -4,15 +4,19 @@
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
 
-    <dimen name="textSizeTitle">24sp</dimen>        <!-- Like title in Info View -->
-    <dimen name="textSizeSubtitle">20sp</dimen>     <!-- Like description in Info View -->
-    <dimen name="textSizeDetails">14sp</dimen>      <!-- Like dateTime or location in Info View -->
-    <dimen name="textSizeButton">12sp</dimen>       <!-- App-wide text size for all buttons -->
-    <dimen name="textSizeLabel">17sp</dimen>        <!-- App-wide text size for all labels -->
-    <dimen name="textSizeField">15sp</dimen>        <!-- App-wide text size for all text fields -->
+    <dimen name="textSize24Title">24sp</dimen>        <!-- Like title in Info View -->
+    <dimen name="textSize20Subtitle">20sp</dimen>     <!-- Like description in Info View -->
+    <dimen name="textSize14Details">14sp
+    </dimen>      <!-- Like dateTime or location in Info View -->
+    <dimen name="textSize12Button">12sp</dimen>       <!-- App-wide text size for all buttons -->
+    <dimen name="textSize17Label">17sp</dimen>        <!-- App-wide text size for all labels -->
+    <dimen name="textSize15Field">15sp
+    </dimen>        <!-- App-wide text size for all text fields -->
 
     <dimen name="defaultCellSize">56dp</dimen>
     <dimen name="largeCellSize">104dp</dimen>
+
+    <dimen name="SSIconSize">266dp</dimen>
 
     <dimen name="EVHeight">185dp</dimen>
     <dimen name="EVInfoHeight">100dp</dimen>
