- Implemented Calendar Event Cell Expand/Collapse - Re-Implemented Club Leader Parts of UserActivity - Fixed UserActivity Versioning issue, UserActivty should now be up to date (or so I hope)

--- a/app/src/main/res/layout/club_activity.xml
+++ b/app/src/main/res/layout/club_activity.xml
@@ -114,7 +114,7 @@
         android:id="@+id/ClubSLeaderList"/>
 
     <!-- Clubs Announcements List -->
-    <ExpandableListView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/ClubSLeaderList"
