--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -114,7 +114,7 @@
                         style="@style/ExtraButtonStyle"
                         android:text="@string/USLeaderButtonText"
                         android:textAlignment="center"
-                        android:onClick="clubLeadershipApplication"
+                        android:onClick="promptClubCode"
                         android:textSize="12sp"
                         android:id="@+id/USLeaderButton" />
 
