- Added proper transitions everywhere     - Created a number of transition to be used         - enter: used on target activity, slide in from the left         - exit: used on source activity, slide out to the left         - left_to_right: same as enter, but the other way around, used for going back         - right_to_left: same as exit, but the other way around, used for going back         - fadein: used on target activity         - fadeout: used on source activity     - Merged UserActivity properly this time     - Create a method in Retrieve to translate int pixels into dp pixels

--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LDLayout"
+    android:id="@+id/NDLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -165,5 +165,5 @@
     <!-- Navigation drawer -->
     <ListView
         style="@style/DrawerListStyle"
-        android:id="@+id/LDList"/>
+        android:id="@+id/NDList"/>
 </android.support.v4.widget.DrawerLayout>
