--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/HDLayout"
+    android:id="@+id/NDLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
@@ -341,6 +341,6 @@
     <!-- Navigation drawer -->
     <ListView
         style="@style/DrawerListStyle"
-        android:id="@+id/HDList"/>
+        android:id="@+id/NDList"/>
 
 </android.support.v4.widget.DrawerLayout>
