--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -33,4 +33,7 @@
     <dimen name="ClubSDescriptionHeight">88dp</dimen>
 
     <dimen name="USTextLabelWidth">103dp</dimen>
+
+    <dimen name="CSActionSheet">250dp</dimen>
+
 </resources>
